--- a/Лаба_Саша.ipynb
+++ b/Лаба_Саша.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -16,60 +16,115 @@
      "output_type": "stream",
      "text": [
       "Synset('iodine.n.01')\n",
+      "I\n",
       "Synset('one.n.01')\n",
+      "I\n",
       "Synset('i.n.03')\n",
+      "I\n",
       "Synset('one.s.01')\n",
+      "I\n",
       "Synset('think.n.01')\n",
+      "think\n",
       "Synset('think.v.01')\n",
+      "think\n",
       "Synset('think.v.02')\n",
+      "think\n",
       "Synset('think.v.03')\n",
+      "think\n",
       "Synset('remember.v.01')\n",
+      "think\n",
       "Synset('think.v.05')\n",
+      "think\n",
       "Synset('think.v.06')\n",
+      "think\n",
       "Synset('intend.v.01')\n",
+      "think\n",
       "Synset('think.v.08')\n",
+      "think\n",
       "Synset('think.v.09')\n",
+      "think\n",
       "Synset('think.v.10')\n",
+      "think\n",
       "Synset('think.v.11')\n",
+      "think\n",
       "Synset('think.v.12')\n",
+      "think\n",
       "Synset('think.v.13')\n",
+      "think\n",
       "Synset('information_technology.n.01')\n",
+      "it\n",
       "Synset('be.v.01')\n",
+      "is\n",
       "Synset('be.v.02')\n",
+      "is\n",
       "Synset('be.v.03')\n",
+      "is\n",
       "Synset('exist.v.01')\n",
+      "is\n",
       "Synset('be.v.05')\n",
+      "is\n",
       "Synset('equal.v.01')\n",
+      "is\n",
       "Synset('constitute.v.01')\n",
+      "is\n",
       "Synset('be.v.08')\n",
+      "is\n",
       "Synset('embody.v.02')\n",
+      "is\n",
       "Synset('be.v.10')\n",
+      "is\n",
       "Synset('be.v.11')\n",
+      "is\n",
       "Synset('be.v.12')\n",
+      "is\n",
       "Synset('cost.v.01')\n",
+      "is\n",
       "Synset('angstrom.n.01')\n",
+      "a\n",
       "Synset('vitamin_a.n.01')\n",
+      "a\n",
       "Synset('deoxyadenosine_monophosphate.n.01')\n",
+      "a\n",
       "Synset('adenine.n.01')\n",
+      "a\n",
       "Synset('ampere.n.02')\n",
+      "a\n",
       "Synset('a.n.06')\n",
+      "a\n",
       "Synset('a.n.07')\n",
+      "a\n",
       "Synset('nice.n.01')\n",
+      "nice\n",
       "Synset('nice.a.01')\n",
+      "nice\n",
       "Synset('decent.s.01')\n",
+      "nice\n",
       "Synset('nice.s.03')\n",
+      "nice\n",
       "Synset('dainty.s.04')\n",
+      "nice\n",
       "Synset('courteous.s.01')\n",
+      "nice\n",
       "Synset('cat.n.01')\n",
+      "cat\n",
       "Synset('guy.n.01')\n",
+      "cat\n",
       "Synset('cat.n.03')\n",
+      "cat\n",
       "Synset('kat.n.01')\n",
+      "cat\n",
       "Synset('cat-o'-nine-tails.n.01')\n",
+      "cat\n",
       "Synset('caterpillar.n.02')\n",
+      "cat\n",
       "Synset('big_cat.n.01')\n",
+      "cat\n",
       "Synset('computerized_tomography.n.01')\n",
+      "cat\n",
       "Synset('cat.v.01')\n",
-      "Synset('vomit.v.01')\n"
+      "cat\n",
+      "Synset('vomit.v.01')\n",
+      "cat\n"
      ]
     },
     {
@@ -98,12 +153,13 @@
     "for token in tokens:\n",
     "   for i in wn.synsets(token):\n",
     "      print (i)\n",
+    "      print (token)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -132,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -171,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -207,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -342,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -390,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
